<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Defender</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="start">Iniciar</string>
    <string name="new_game">Novo Jogo</string>
    <string name="load_game">Carregar Jogo</string>
    <string name="knight">Cavaleiro</string>
    <string name="knight_description">Cavaleiro honrado.</string>
    <string name="legal">Legal Notices</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="un">UN</string>
    <string name="united_nations">United Nations</string>
    <string name="lincoln_center">Lincoln Center</string>
    <string name="lincoln_center_snippet">Home of Jazz at Lincoln Center</string>
    <string name="carnegie_hall">Carnegie Hall</string>
    <string name="practice_x3">Where you go with practice, practice, practice</string>
    <string name="downtown_club">The Downtown Club</string>
    <string name="heisman_trophy">Original home of the Heisman Trophy</string>
    <string name="icon">CommonsWare logo</string>
    <string name="tower">Tower</string>
    <string name="instructions_start">Pressione o local no qual deseja construir o seu castelo.</string>
    <string name="enemys">Inimigos</string>
    
    <string name="you_can_move_your_castle_dragging">Você pode mudar o local do seu castelo, arrastando e soltando no lugar desejado.</string>
    <string name="your_castle_was_build_you_can_drag_and_drop_to_a_better_place">Seu castelo já foi construído você poderá arrasta-lo para outro lugar.</string>
    

</resources>